--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="leftcolumn">
     <div class="card">
       <div class="c4-border-cc-1">
-        <img class="fakeimg" style="height:250px; width: 20%; float:right; " src="/html.6/img/beyeu1.jpg"/>
+        <img class="fakeimg" style="height:250px; width: 20%; float:right; " src="img/beyeu1.jpg"/>
       </div>
       <h2>Đôi lời giới thiệu</h2>
       <h5>Buôn Trấp, Sep 15, 2021</h5>
