--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
     </div>
     <div class="card1">
-        <img class="fakeimg1" style="height:250px; width: 20%; float:right" src="/html.6/img/beyeu12.jpg"/>
+        <img class="fakeimg1" style="height:250px; width: 20%; float:right" src="img/beyeu12.jpg"/>
       <h2>Tính cách</h2>
       <h5>Tính cách của Bảo Như luôn là điều tôi luôn tìm hiểu...</h5>
       
