--- a/babyxinh.html
+++ b/babyxinh.html
@@ -26,7 +26,7 @@
           <h1 style="padding: 15px 0 15px 0;">Baby Xinh</h1>
           <div class="img_banner">
             <figure class="c4-izmir c4-border-bottom-left c4-image-rotate-right c4-gradient-bottom-right" tabindex="0" style="--primary-color: #f12711; --secondary-color: #f5af19; --image-opacity: .1;">
-                <img src="/html.6/img/beyeu1.jpg" alt="Sample Image" />
+                <img src="img/beyeu1.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-bottom-left">
                   <div class="c4-reveal-right c4-delay-100">
                     <h2>
@@ -36,7 +36,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-cc-3 c4-image-zoom-out c4-gradient-bottom-right" tabindex="0" style="--primary-color: #7303c0; --secondary-color: #ec38bc;">
-                <img src="/html.6/img/beyeu2.jpg" alt="Sample Image" />
+                <img src="img/beyeu2.jpg" alt="Sample Image" />
                 <figcaption>
                   <div class="c4-rotate-up-right c4-delay-200">
                     <h2>
@@ -51,7 +51,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-right c4-image-pan-left c4-gradient-top" tabindex="0" style="--primary-color: #000046; --secondary-color: #1CB5E0; --text-color: #fdeff9; --border-color: #fdeff9;">
-                <img src="/html.6/img/beyeu3.jpg" alt="Sample Image" />
+                <img src="img/beyeu3.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-top-right">
                   <div class="c4-reveal-left">
                     <h2>
@@ -71,7 +71,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-right c4-image-pan-left c4-gradient-top" tabindex="0" style="--primary-color: #000046; --secondary-color: #1CB5E0; --text-color: #fdeff9; --border-color: #fdeff9;">
-                <img src="/html.6/img/beyeu4.jpg" alt="Sample Image" />
+                <img src="img/beyeu4.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-top-right">
                   <div class="c4-reveal-left">
                     <h2>
@@ -91,7 +91,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-right c4-image-pan-left c4-gradient-top" tabindex="0" style="--primary-color: #000046; --secondary-color: #1CB5E0; --text-color: #fdeff9; --border-color: #fdeff9;">
-                <img src="/html.6/img/beyeu5.jpg" alt="Sample Image" />
+                <img src="img/beyeu5.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-top-right">
                   <div class="c4-reveal-left">
                     <h2>
@@ -111,7 +111,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-right c4-image-pan-left c4-gradient-top" tabindex="0" style="--primary-color: #000046; --secondary-color: #1CB5E0; --text-color: #fdeff9; --border-color: #fdeff9;">
-                <img src="/html.6/img/beyeu6.jpg" alt="Sample Image" />
+                <img src="img/beyeu6.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-top-right">
                   <div class="c4-reveal-left">
                     <h2>
@@ -131,7 +131,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-right c4-image-pan-left c4-gradient-top" tabindex="0" style="--primary-color: #000046; --secondary-color: #1CB5E0; --text-color: #fdeff9; --border-color: #fdeff9;">
-                <img src="/html.6/img/beyeu7.jpg" alt="Sample Image" />
+                <img src="img/beyeu7.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-top-right">
                   <div class="c4-reveal-left">
                     <h2>
@@ -151,7 +151,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-right c4-image-pan-left c4-gradient-top" tabindex="0" style="--primary-color: #000046; --secondary-color: #1CB5E0; --text-color: #fdeff9; --border-color: #fdeff9;">
-                <img src="/html.6/img/beyeu8.jpg" alt="Sample Image" />
+                <img src="img/beyeu8.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-top-right">
                   <div class="c4-reveal-left">
                     <h2>
@@ -171,7 +171,7 @@
                 </figcaption>
               </figure>
               <figure class="c4-izmir c4-border-right c4-image-pan-left c4-gradient-top" tabindex="0" style="--primary-color: #000046; --secondary-color: #1CB5E0; --text-color: #fdeff9; --border-color: #fdeff9;">
-                <img src="/html.6/img/beyeu9.jpg" alt="Sample Image" />
+                <img src="img/beyeu9.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-top-right">
                   <div class="c4-reveal-left">
                     <h2>
