--- a/babymlem.html
+++ b/babymlem.html
@@ -26,7 +26,7 @@
           <h1 style="padding: 15px 0 15px 0;">Baby mlem</h1>
           <div class="img_banner">
             <figure class="c4-izmir c4-border-bottom-left c4-image-rotate-right c4-gradient-bottom-right" tabindex="0" style="--primary-color: #f12711; --secondary-color: #f5af19; --image-opacity: .1;">
-                <img src="/html.6/img/beyeu23.jpg" alt="Sample Image" />
+                <img src="img/beyeu23.jpg" alt="Sample Image" />
                 <figcaption class="c4-layout-bottom-left">
                   <div class="c4-reveal-right c4-delay-100">
                     <h2>
