--- a/ngiu.html
+++ b/ngiu.html
@@ -30,7 +30,7 @@
                 <figcaption class="c4-layout-bottom-left">
                   <div class="c4-reveal-right c4-delay-100">
                     <h2>
-                      Hong có nhiều đâu, của tuiiii!!!
+                      Strong boy bảo vệ em :)))
                     </h2>
                   </div>
                 </figcaption>
