--- a/tienich.html
+++ b/tienich.html
@@ -11,7 +11,7 @@
     <div class="topnav">
         <a href="index.html">Trang chủ</a>
         <a href="babyxinh.html">Album ảnh</a>
-        <a href="#">Tiện ích</a>
+        <a href="tienich.html">Tiện ích</a>
         <input type="text" placeholder="Tìm kiếm..." style="float:right; margin-top:10px;margin-right:10px"/>
       </div>
       <div class="content">
