--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li class = "content">
       <a href="babyxinh.html">Album ảnh</a>
      
-    <li><a href="">Tiện ích</a></li>
+    <li><a href="tienich.html">Tiện ích</a></li>
   </ul>
 </nav>
 
