--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Người tôi yêu</title>
     <link rel="stylesheet" href="style6.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ciar4n/izmir@1.0.1/izmir.min.css">
-    <link rel="shortcut icon" href="img/beyeu26.jpg"
+    <link rel="shortcut icon" href="img/beyeu26.jpg"/>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
     <li class = "content">
       <a href="babyxinh.html">Album ảnh</a>
      
-    <li><a href="tienich.html" style="font-size:50px">Tiện ích</a></li>
+    <li><a href="tienich.html">Tiện ích</a></li>
   </ul>
 </nav>
 
